🐛: Fix Redis realtime collection
Fix queue\nBatch process\nfindAllById never guarantees the order