@@ -5,6 +5,7 @@ import app.beautyminder.dto.CosmeticMetricData;
 import app.beautyminder.dto.Event;
 import app.beautyminder.repository.CosmeticRepository;
 import app.beautyminder.service.EventQueue;
+import jakarta.annotation.PostConstruct;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -14,7 +15,9 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.swing.*;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -48,6 +51,7 @@ public class CosmeticMetricService {
     private final double FAV_WEIGHT = 2.0;
 
 
+    @PostConstruct
     @Scheduled(cron = "0 0 4 * * ?") // everyday 4am
     public void resetCounts() {
         Set<String> keys = redisTemplate.keys("cosmeticMetrics:*");
@@ -72,13 +76,13 @@ public class CosmeticMetricService {
 
             switch (event.getType()) {
                 case CLICK:
-                    data.setClickCount(data.getClickCount() + 1);
+                    data.setClickCount((data.getClickCount() != null ? data.getClickCount() : 0) + 1);
                     break;
                 case HIT:
-                    data.setHitCount(data.getHitCount() + 1);
+                    data.setHitCount((data.getHitCount() != null ? data.getHitCount() : 0) + 1);
                     break;
                 case FAV:
-                    data.setFavCount(data.getFavCount() + 1);
+                    data.setFavCount((data.getFavCount() != null ? data.getFavCount() : 0) + 1);
                     break;
             }
             aggregatedData.put(event.getCosmeticId(), data);
@@ -112,10 +116,26 @@ public class CosmeticMetricService {
 
     private void updateRedisMetrics(String cosmeticId, CosmeticMetricData data) {
         String key = buildRedisKey(cosmeticId);
+        // Retrieve existing counts from Redis
+        Map<Object, Object> existingCounts = redisTemplate.opsForHash().entries(key);
+
+        long existingClickCount = existingCounts.containsKey(ActionType.CLICK.getActionString())
+                ? Long.parseLong((String) existingCounts.get(ActionType.CLICK.getActionString())) : 0;
+        long existingHitCount = existingCounts.containsKey(ActionType.HIT.getActionString())
+                ? Long.parseLong((String) existingCounts.get(ActionType.HIT.getActionString())) : 0;
+        long existingFavCount = existingCounts.containsKey(ActionType.FAV.getActionString())
+                ? Long.parseLong((String) existingCounts.get(ActionType.FAV.getActionString())) : 0;
+
+        // Add new counts to existing counts
+        long newClickCount = (data.getClickCount() != null ? data.getClickCount() : 0) + existingClickCount;
+        long newHitCount = (data.getHitCount() != null ? data.getHitCount() : 0) + existingHitCount;
+        long newFavCount = (data.getFavCount() != null ? data.getFavCount() : 0) + existingFavCount;
+
+        // Update Redis with new total counts
         redisTemplate.opsForHash().putAll(key, Map.of(
-                "clicks", data.getClickCount().toString(),
-                "hits", data.getHitCount().toString(),
-                "favs", data.getFavCount().toString()
+                ActionType.CLICK.getActionString(), Long.toString(newClickCount),
+                ActionType.HIT.getActionString(), Long.toString(newHitCount),
+                ActionType.FAV.getActionString(), Long.toString(newFavCount)
         ));
     }
 
@@ -127,43 +147,61 @@ public class CosmeticMetricService {
     public List<Cosmetic> getTopRankedCosmetics(int size) {
         // Retrieve all keys for the cosmetics metrics
         Set<String> keys = redisTemplate.keys("cosmeticMetrics:*");
+        if (keys == null) {
+            return Collections.emptyList();  // handle null keys gracefully
+        }
 
         // This map will hold the calculated scores for each cosmetic ID
         Map<String, Double> cosmeticScores = new HashMap<>();
 
-        if (keys != null) {
-            for (String key : keys) {
-                Map<Object, Object> metrics = redisTemplate.opsForHash().entries(key);
+        for (String key : keys) {
+            Map<Object, Object> metrics = redisTemplate.opsForHash().entries(key);
 
-                // Retrieve each metric and handle potential null values
-                double clicks = Double.parseDouble((String) metrics.getOrDefault("clicks", "0"));
-                double hits = Double.parseDouble((String) metrics.getOrDefault("hits", "0"));
-                double favs = Double.parseDouble((String) metrics.getOrDefault("favs", "0"));
+            // Retrieve each metric and handle potential null values
+            // Convert string values from Redis to Long
+            long clicks = Long.parseLong((String) metrics.getOrDefault(ActionType.CLICK.getActionString(), "0"));
+            long hits = Long.parseLong((String) metrics.getOrDefault(ActionType.HIT.getActionString(), "0"));
+            long favs = Long.parseLong((String) metrics.getOrDefault(ActionType.FAV.getActionString(), "0"));
 
-                // Calculate the score based on the retrieved metrics
-                double score = clicks * CLICK_WEIGHT + hits * HIT_WEIGHT + favs * FAV_WEIGHT;
+            // Calculate the score based on the retrieved metrics
+            double score = clicks * CLICK_WEIGHT + hits * HIT_WEIGHT + favs * FAV_WEIGHT;
 
-                // Extract the cosmeticId from the key (assuming the key is in the format "cosmeticMetrics:{cosmeticId}")
-                String cosmeticId = key.split(":")[1];
+            // Extract the cosmeticId from the key (assuming the key is in the format "cosmeticMetrics:{cosmeticId}")
+            String cosmeticId = key.split(":")[1];
 
-                // Add the calculated score to the map
-                cosmeticScores.put(cosmeticId, score);
-            }
+            // Add the calculated score to the map
+            cosmeticScores.put(cosmeticId, score);
         }
 
-        // Sort the entries in the map by score in descending order and limit the number of results to 'size'
-        List<Map.Entry<String, Double>> sortedEntries = new ArrayList<>(cosmeticScores.entrySet());
-        sortedEntries.sort(Map.Entry.<String, Double>comparingByValue().reversed());
+        // Sort the entries in the map by score in descending order
+        Map<String, Double> sortedScores = cosmeticScores.entrySet().stream()
+                .sorted(Map.Entry.<String, Double>comparingByValue().reversed())
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue,
+                        (e1, e2) -> e1,
+                        LinkedHashMap::new
+                ));
 
-        // Collect the top cosmetic IDs based on the sorted scores
-        List<String> topCosmeticIds = sortedEntries.stream()
+        // Limit the number of results to 'size'
+        List<String> topCosmeticIds = sortedScores.keySet().stream()
                 .limit(size)
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
 
         // Fetch Cosmetic objects from the repository using the collected top cosmetic IDs
+        List<Cosmetic> cosmetics = cosmeticRepository.findAllById(topCosmeticIds);
+
+        // Create a map of cosmetics keyed by their id for easy lookup
+        Map<String, Cosmetic> cosmeticMap = cosmetics.stream()
+                .collect(Collectors.toMap(Cosmetic::getId, Function.identity()));
+
+        // Build an ordered list of cosmetics based on the order of topCosmeticIds
+        return topCosmeticIds.stream()
+                .map(cosmeticMap::get)
+                .collect(Collectors.toList());
+        // Fetch Cosmetic objects from the repository using the collected top cosmetic IDs
         // The repository method used here should be capable of handling a list of IDs for fetching multiple records
-        return cosmeticRepository.findAllById(topCosmeticIds);
+//        return cosmeticRepository.findAllById(topCosmeticIds); // findAllById doesn't guarantee the order
     }
 
 
@@ -180,9 +218,11 @@ public class CosmeticMetricService {
                 data.setCosmeticId(fullKey.replace("cosmeticMetrics:", "")); // Extract the cosmetic ID from the key
 
                 // Set counts, ensuring we handle nulls gracefully by treating them as zeroes
-                data.setClickCount(Long.parseLong((String) metrics.getOrDefault("clicks", "0")));
-                data.setHitCount(Long.parseLong((String) metrics.getOrDefault("hits", "0")));
-                data.setFavCount(Long.parseLong((String) metrics.getOrDefault("favs", "0")));
+                // Convert string values from Redis to Long
+                data.setClickCount(Long.valueOf((String) metrics.getOrDefault(ActionType.CLICK.getActionString(), "0")));
+                data.setHitCount(Long.valueOf((String) metrics.getOrDefault(ActionType.HIT.getActionString(), "0")));
+                data.setFavCount(Long.valueOf((String) metrics.getOrDefault(ActionType.FAV.getActionString(), "0")));
+
 
                 allCounts.add(data);
             }
@@ -192,9 +232,9 @@ public class CosmeticMetricService {
 
     @Getter
     public enum ActionType {
-        CLICK("click"),
-        HIT("hit"),
-        FAV("fav");
+        CLICK("clicks"),
+        HIT("hits"),
+        FAV("favs");
 
         private final String actionString;
 
